--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>IT Solutions</title>
+  <title>Yash Compusoft India</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-    <div class="super_container">
-      <app-root></app-root>
+  <div class="super_container">
+    <app-root></app-root>
   </div>
 </body>
+
 </html>
