--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,6 +7,8 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8JiO4ZZoa6X9a5Drob8WrRSpBhEotkUE&callback=initMap"
+    async defer></script>
 </head>
 
 <body>
